Bug 437408 - krunner screen brightness command doens't work as intended
Summary: krunner screen brightness command doens't work as intended
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.21.5
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-20 12:36 UTC by Lucas
Modified: 2021-05-20 15:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lucas 2021-05-20 12:36:49 UTC
SUMMARY
krunner command to increase screen brightness doesn't work. The screen brightness percentage doesn't match with that shown in krunner, and it's impossible to increase beyond 39%. From 1% to 100% in krunner, it changes the screen brightness from 1% to 39%. "screen brightness 0" set brightness to minimum. "screen brightness 50" set brightness to 20%. "screen brightness 99" or anything greater than that set brightness to 39%.

STEPS TO REPRODUCE
1. Hit Alt F2/Open krunner
2. Try to set screen brightness to any value greater than 39%

OBSERVED RESULT
Screen brightness set to different values than was inserted, to the maximum of 39%

EXPECTED RESULT
Screen brightness changing to inserted value

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 21.04 - kernel 5.11.0-17
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Comment 1 Bug Janitor Service 2021-05-20 14:13:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/871
Comment 2 David Redondo 2021-05-20 14:48:13 UTC
Git commit 9dc13079970d28c499c5ca77aa7d9c3f0da4eaa0 by David Redondo.
Committed on 20/05/2021 at 14:06.
Pushed by davidre into branch 'master'.

PowerDevilRunner: Set screen brightness values

powerdevil expects the brightness to be in absolute values not
percentages.
I know this is a blocking call, but we use QDBusInterfaces and
other blocking calls in here so it's not great but is a reasonable
fix for now.

M  +5    -1    runners/powerdevil/PowerDevilRunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/9dc13079970d28c499c5ca77aa7d9c3f0da4eaa0
Comment 3 David Redondo 2021-05-20 14:54:28 UTC
Git commit c1666d7e328054f0c74ace726310046bdacf2a89 by David Redondo.
Committed on 20/05/2021 at 14:54.
Pushed by davidre into branch 'Plasma/5.22'.

PowerDevilRunner: Set screen brightness values

powerdevil expects the brightness to be in absolute values not
percentages.
I know this is a blocking call, but we use QDBusInterfaces and
other blocking calls in here so it's not great but is a reasonable
fix for now.


(cherry picked from commit 9dc13079970d28c499c5ca77aa7d9c3f0da4eaa0)

M  +5    -1    runners/powerdevil/PowerDevilRunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/c1666d7e328054f0c74ace726310046bdacf2a89
Comment 4 Lucas 2021-05-20 14:58:59 UTC
(In reply to Bug Janitor Service from comment #1)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/871

Even when I try to use absolute values, the brightness never pass beyond 39%